--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,12 @@ dependencies {
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:design:$support_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
     //Authentication
     implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
