--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     //Authentication
     implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
+    //RTD
+    implementation 'com.google.firebase:firebase-database:11.8.0'
 
 
     testImplementation 'junit:junit:4.12'
