Create core module with main chat code (exclude auth and friends logic)

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,27 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.silwek.cleverchat">
 
     <application
-        android:name=".CleverChatApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activities.SplashscreenActivity"
+            android:name=".ui.activities.ChatRoomsActivity"
+            android:label="@string/title_chatroom_list"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activities.AccountActivity"
-            android:label="@string/title_activity_account"
+            android:name=".ui.activities.ChatActivity"
+            android:parentActivityName=".ui.activities.ChatRoomsActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.silwek.cleverchat.ui.activities.ChatRoomsActivity"/>
+        </activity>
+        <activity
+            android:name=".ui.activities.CreateChatActivity"
+            android:label="@string/title_activity_create_chat"
             android:parentActivityName=".ui.activities.ChatRoomsActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -29,5 +29,4 @@
                 android:value="com.silwek.cleverchat.ui.activities.ChatRoomsActivity"/>
         </activity>
     </application>
-
 </manifest>
