--- a/core/build.gradle
+++ b/core/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation "org.mockito:mockito-core:2.8.47"
+    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
 
     //RTD
     implementation "com.google.firebase:firebase-database:$firebase_version"
